FBTest for issue 6566

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -294,6 +294,7 @@ var testList = [
     {group: "script",             uri: "script/4818/issue4818.js",                desc: "frame.eval fails for everthing but the newest frame of the stack", testPage: "script/4818/issue4818.html"},
     {group: "script",             uri: "script/4932/issue4932.js",                desc: "The Script panel shows No Javascript on this page even if they are scripts within an iframe", testPage: "script/4932/issue4932.html"},
     {group: "script",             uri: "script/6476/issue6476.js",                desc: "Change directive for sourceURL", testPage: "script/6476/issue6476.html"},
+    {group: "script",             uri: "script/6566/issue6566.js",                desc: "getEventListeners command provides wrong source link", testPage: "script/6566/issue6566.html"},
     {group: "script/breakpoints", uri: "script/breakpoints/4854/issue4854.js",    desc: "Issue 4854: XHR breakpoints can't be removed from Breakpoints side panel", testPage: "script/breakpoints/4854/issue4854.html"},
     {group: "script/breakpoints", uri: "script/breakpoints/4889/issue4889.js",    desc: "Issue 4889: Folding for breakpoint categories", testPage: "script/breakpoints/4889/issue4889.html"},
     {group: "script/breakpoints", uri: "script/breakpoints/5525/issue5525.js",    desc: "Setting error breakpoints causes error in Breakpoints side panel", testPage: "script/breakpoints/5525/issue5525.html"},
