--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -393,6 +393,7 @@ var testList = [
     {group: "cookies",            uri: "cookies/5834/issue5834.js",               desc: "Add infotip for cookie size", testPage: "cookies/5834/issue5834.php" },
     {group: "cookies",            uri: "cookies/6535/issue6535.js",               desc: "Show Max-Age for cookies in Net panel", testPage: "cookies/6535/issue6535.php" },
     {group: "cookies",            uri: "cookies/6547/issue6547.js",               desc: "Show cookie Max-Age when attribute is <= 0", testPage: "cookies/6547/issue6547.php" },
+    {group: "cookies",            uri: "cookies/6570/issue6570.js",               desc: "Show when server deletes cookie in Net tab", testPage: "cookies/6570/issue6570.php" },
 ];
 </script>
 
