--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -39,6 +39,7 @@ var testList = [
     {group: "lib/css",            uri: "lib/css/classes.js",                      desc: "Verify Css.setClass(), Css.hasClass() and Css.removeClass() are working as expected" },
     {group: "lib/search",         uri: "lib/search/literalRegExp.js",             desc: "Verify Search.LiteralRegExp() is working as expected" },
     {group: "lib/search",         uri: "lib/search/textSearch.js",                desc: "Verify Search.TextSearch() is working as expected", testPage: "lib/search/textSearch.htm" },
+    {group: "lib/search",         uri: "lib/search/textSearch2.js",               desc: "Just testing test-bot failures", testPage: "lib/search/textSearch2.html" },
     {group: "lib/storage",        uri: "lib/storage/storageService.js",           desc: "Verify modules/storageService is working as expected" },
     {group: "lib/string",         uri: "lib/string/formatTime.js",                desc: "Verify Str.formatTime() is working as expected" },
     {group: "lib/url",            uri: "lib/url/absoluteURL.js",                  desc: "Verify Url.absoluteURLs() is working as expected" },
