FBTest for issue 6582

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -267,6 +267,8 @@ var testList = [
     {group: "css",                uri: "css/6282/issue6282.js",                   desc: "CSS panel fails on interpreting @page", testPage: "css/6282/issue6282.html"},
     {group: "css",                uri: "css/6405/issue6405.js",                   desc: "\"Get Matching Elements\" must not be displayed for @-rules", testPage: "css/6405/issue6405.html"},
     {group: "css",                uri: "css/6531/issue6531.js",                   desc: "Location Menu is not displayed when there are just CSS files in frames", testPage: "css/6531/issue6531.html"},
+    {group: "css",                uri: "css/6582/issue6582-1.js",                 desc: "Removing style sheets dynamically breaks CSS panel", testPage: "css/6582/issue6582-1.html"},
+    {group: "css",                uri: "css/6582/issue6582-2.js",                 desc: "Removing style sheets dynamically breaks CSS panel", testPage: "css/6582/issue6582-2.html"},
     {group: "css/computed",       uri: "css/computed/2916/issue2916.js",          desc: "Trace Styles Feature", testPage: "css/computed/2916/issue2916.html"},
     {group: "css/computed",       uri: "css/computed/3207/issue3207.js",          desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/computed/3207/issue3207.html"},
     {group: "css/computed",       uri: "css/computed/4132/issue4132.js",          desc: "Only show applied styles in Computed side panel", testPage: "css/computed/4132/issue4132.html"},
